2008-12-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/cgi-bin/gluon.cgi: configuration file of CGI local
	environment.

	* run/server/webrick_cgi: CGI server.

	* run/cgi-bin/run.cgi -> run/cgi-bin/gluon.cgi.

	* bin/gluon_example, bin/gluon_setup, lib/gluon/setup.rb: renewal
	architecture.

	* bin/gluon_update: obsolete.

2008-11-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/fstore.rb: session store by file.

2008-11-25  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/errmap.rb: error handler.

2008-11-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb: default handler.

2008-11-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: block syntax of back-end service for
	configuration.

	* lib/gluon/po.rb: settings of each attribute of HTML element.

2008-11-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/backend.rb: backend service for application.

2008-11-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/htmlview.rb: HTML embedded view.

2008-10-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb, lib/gluon/po.rb: optional `id' and `class'
	embedded at template.

2008-10-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: obsolete link_uri and frame_uri.

2008-10-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: timing of passing path_args is changed.

2008-10-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/renderer.rb: api for any template.

	* lib/gluon/action.rb: ignored any no-pair keyword in
	query-string.

	* lib/gluon/urlmap.rb: optional path_info for class2path.

2008-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb: template like CGIKit 1.x.

2008-09-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/erbview.rb: default suffix changed.

	* lib/gluon/web/token.rb: independent session.

	* lib/gluon/po.rb: optional advices for presentation commands.

2008-09-22  TOKI Yoshinori  <toki@freedom.ne.jp>
